2010-08-23  BVK Chaitanya  <bvk.groups@gmail.com>

	New Automake based build system for GRUB.

	* ABOUT-NLS: New file.
	* Makefile.am: New file. GRUB host utils' rules that doesn't fit
	in Makefile.util.def file.
	* Makefile.util.def: New file.  Autogen build definitions file for
	GRUB host utils.
	* conf/Makefile.common: New file.  Common variables for GRUB host
	utils and target modules.
	* conf/Makefile.extra-dist: New file.  Extra files for make dist.
	* docs/Makefile.am: New file.  Automake file for docs.
	* gentpl.py: New file.  Python script to generate Autogen
	template.
	* grub-core/Makefile.am: New file.  GRUB target modules' rules
	that doesn't fit in Makefile.core.def file.
	* grub-core/Makefile.core.def: New file.  Autogen build
	definitions file for GRUB target modules.
	* grub-core/lib/setjmp.S: New file.  Wrapper for target_cpu
	specific setjmp.S file.
	* po/Makefile.am: New file.

	* .bzrignore: New ignores.
	* INSTALL: New requirements, without Ruby.
	* acinclude.m4: Use TARGET_IMG_BASE_LDOPT variable instead.
	* autogen.sh: Updated to invoke autogen as necessary.
	* configure.ac: Separate *FLAGS with HOST_ and TARGET_ prefixes,
	and defines for Automake conditionals.
	* geninit.sh: Refactoring.

	* include/grub/dl.h: Allow build rules to define GRUB_MOD_* if
	necessary.
	* include/grub/emu/getroot.h (grub_make_system_path_relative_to_its_root):
	New prototype.

	* include/grub/test.h: Fix functional test modules' naming.
	* grub-core/tests/example_functional_test.c: Fix test module name.

	* util/misc.c: Hosted versions' of grub functions for libgrub.a
	* tests/lib/unit_test.c: Remove hosted versions of grub functions.
	* util/grub-editenv.c: Likewise.
	* util/grub-fstest.c: Likewise.
	* util/grub-mkdevicemap.c: Likewise.
	* util/grub-mkfont.c: Likewise.
	* util/grub-mkimage.c: Likewise.
	* util/grub-mkpasswd-pbkdf2.c: Likewise.
	* util/grub-probe.c: Likewise.
	* util/grub-script-check.c: Likewise.
	* util/i386/pc/grub-setup.c: Likewise.